update ArcServiceExtension dependencies on datastore parameters
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31355 e5c1c795-43da-0310-a71f-fac65c449510